# dental-ai-crm

./: .env  .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026-07-05_initial_tables.py  2026-07-07_add_doctor_dental_service_relation.py  2026-07-07_add_doctor_working_hours.py  2026-07-11_add_call_sessions_and_messages.py
src/: config.py  database.py  exceptions.py  logging_config.py  main.py  models.py  models_registry.py
src/ai_agent/: dependencies.py  llm_client.py  parser.py  prompts.py  router.py  schemas.py  service.py  state.py  trace.py
src/appointment/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/call_session/: __init__.py  models.py  repository.py
src/conversation_message/: __init__.py  models.py  repository.py
src/dental_service/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/doctor/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
src/patient/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
