[project]
name = "dental-ai-crm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openapi>=0.1.1",
    "langchain-openrouter>=0.2.6",
    "langgraph>=1.2.8",
    "openai>=2.44.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tzdata>=2026.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 82

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]
